--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-#inoSilesia
+<html>
+  <head>
+		<meta charset="UTF-8">
+		<title>#INOSILESIA</title>
+		<style>
+		body {
+			background-image: url('light_wool.png');
+		}
+		.link{
+			color:#700 !important;
+			text-decoration: none !important;
+			font-size:48px;
+			display:block;
+			text-align:center;
+			margin:40vh auto 0px auto;
+		}
+		.comming{
+			text-transform:uppercase;
+			text-align:center;
+			color:#777;
+			font-size:12px;
+		}
+		</style>
+	</head>
+	<body lang="PL">
+		<a class="link" target="_blank" href="https://www.facebook.com/hashtag/inosilesia">#inosilesia</a>
+		<div class="comming">
+			white and dark side of the power - together
+			<br>
+			coming soon
+		</div>
+	</body>
+</html>
