--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="comming">
 			white and dark side of the power - together
 			<br>
-			coming soon
+			coming soon...
 		</div>
 	</body>
 </html>
