--- a/preview/index.html
+++ b/preview/index.html
@@ -47,7 +47,7 @@
     <div class="content">
       <a class="link" target="_blank" href="https://www.facebook.com/hashtag/inosilesia">#inoSilesia</a>
       <div class="comming">
-         wydażenia i innowacje ino w województwie śląskim
+         wydarzenia i innowacje ino w województwie śląskim
       </div>
     </div>
     
