--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <html>
-  <head>
-		<meta charset="UTF-8">
-		<title>#INOSILESIA</title>
-		<style>
-		body {
-			background-image: url('light_wool.png');
-		}
-		.link{
-			color:#700 !important;
-			text-decoration: none !important;
-			font-size:48px;
-			display:block;
-			text-align:center;
-			margin:40vh auto 0px auto;
-		}
-		.comming{
-			text-transform:uppercase;
-			text-align:center;
-			color:#777;
-			font-size:12px;
-		}
-		</style>
-	</head>
-	<body lang="PL">
-		<a class="link" target="_blank" href="https://www.facebook.com/hashtag/inosilesia">#inosilesia</a>
-		<div class="comming">
-			white and dark side of the power - together
-			<br>
-			coming soon...
-		</div>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>#INOSILESIA</title>
+
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Slabo+27px' type='text/css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' type='text/css'>
+    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="modules/bg-gallery/BGimageGallery.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
+    <!--[if lt IE 9]>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.ie.min.css" />
+    <![endif]-->
+</head>
+<body lang="PL">
+
+<a class="link" target="_blank" href="https://www.facebook.com/hashtag/inosilesia">#inoSilesia</a>
+<div class="slogan">
+    <span class="slogan-firstline">wydażenia i innowacje</span> ino w województwie śląskim
+</div>
+
+<a class="github-fork-ribbon" href="https://github.com/inoSilesia/inosilesia.github.io" title="Open Source">Open Sourde</a>
+<div class="bg1"></div>
+<div class="bg2"></div>
+<div class="bg-credits"></div>
+<div class="bg-shade"></div>
+<script src="modules/bg-gallery/BGimageGallery.js"></script>
+<script src="assets/gallery/app.js"></script>
+</body>
 </html>
