Updated title and fixed typo, again :D

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>#INOSILESIA</title>
+    <title>#inoSilesia - wydarzenia i innowacje ino w województwie śląskim</title>
 
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Slabo+27px' type='text/css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' type='text/css'>
@@ -17,7 +17,7 @@
 
 <a class="link" target="_blank" href="https://www.facebook.com/hashtag/inosilesia">#inoSilesia</a>
 <div class="slogan">
-    <span class="slogan-firstline">wydażenia i innowacje</span> ino w województwie śląskim
+    <span class="slogan-firstline">wydarzenia i innowacje</span> ino w województwie śląskim
 </div>
 
 <a class="github-fork-ribbon" href="https://github.com/inoSilesia/inosilesia.github.io" title="Open Source">Open Sourde</a>
