Added og:image tag to make things nicer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>#inoSilesia - wydarzenia i innowacje ino w województwie śląskim</title>
 
+    <meta property="og:image" content="assets/inoSilesia.jpg" />
+
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Slabo+27px' type='text/css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' type='text/css'>
     <link rel="stylesheet" href="assets/styles.css">
