--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>#inoSilesia - wydarzenia i innowacje ino w województwie śląskim</title>
-
-    <meta property="og:image" content="assets/inoSilesia.jpg" />
+    
+    <meta property="og:url" content="http://inosilesia.pl/" />
+    <meta property="og:image" content="http://inosilesia.pl/assets/inoSilesia.jpg" />
 
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Slabo+27px' type='text/css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' type='text/css'>
