Added partners logotypes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>#inoSilesia - wydarzenia i innowacje ino w województwie śląskim</title>
-    
+
     <meta property="og:url" content="http://inosilesia.pl/" />
     <meta property="og:image" content="http://inosilesia.pl/assets/inoSilesia.jpg" />
 
@@ -18,17 +18,37 @@
 </head>
 <body lang="PL">
 
-<a class="link" target="_blank" href="https://www.facebook.com/hashtag/inosilesia">#inoSilesia</a>
-<div class="slogan">
-    <span class="slogan-firstline">wydarzenia i innowacje</span> ino w województwie śląskim
-</div>
+    <a class="link" target="_blank" href="https://www.facebook.com/hashtag/inosilesia">#inoSilesia</a>
+    <h1 class="slogan">
+        <span class="slogan-firstline">wydarzenia i innowacje</span> ino w województwie śląskim
+    </h1>
 
-<a class="github-fork-ribbon" href="https://github.com/inoSilesia/inosilesia.github.io" title="Open Source">Open Sourde</a>
-<div class="bg1"></div>
-<div class="bg2"></div>
-<div class="bg-credits"></div>
-<div class="bg-shade"></div>
-<script src="modules/bg-gallery/BGimageGallery.js"></script>
-<script src="assets/gallery/app.js"></script>
+    <div class="partners">
+        <h3>
+            Hashtag promują
+        </h3>
+        <a href="http://agilesilesia.pl" title="Agile Silesia" target="_blank"><img src="assets/partners/agilesilesia.png" alt="Agile Silesia"/></a>
+        <a href="http://www.blosilesia.org" title="Fundacja Blosilesia" target="_blank"><img src="assets/partners/blosilesia.png" alt="Fundacja Blosilesia"/></a>
+        <a href="https://www.facebook.com/CzwartekSocialMedia/" title="Czwartkowe Spotkania Social Media" target="_blank"><img src="assets/partners/czwrtk.png" alt="Czwartkowe Spotkania Social Media"/></a>
+        <a href="http://geekfactory.pl/" title="Geek Factory" target="_blank"><img src="assets/partners/geekfactory.png" alt="Geek Factory"/></a>
+        <a href="http://neocodis.com/" title="Neocodis" target="_blank"><img src="assets/partners/neocodis.png" alt="Neocodis"/></a>
+        <a href="http://www.projectpeople.pl" title="Project: People" target="_blank"><img src="assets/partners/projectpeople.png" alt="Project: People"/></a>
+        <a href="https://qualityexcites.pl/" title="Quality Excites" target="_blank"><img src="assets/partners/qualityexcites.png" alt="Quality Excites"/></a>
+        <a href="https://qualityexcites.pl/quality-meetup" title="Quality Meetup" target="_blank"><img src="assets/partners/qualitymeetup.png" alt="Quality Meetup"/></a>
+        <a href="https://www.facebook.com/StartupPodbeskidzie/" title="Startup Podbeskidzie" target="_blank"><img src="assets/partners/startuppodbeskidzie.png" alt="Startup Podbeskidzie"/></a>
+        <a href="http://tedxkatowice.pl" title="TEDxKatowice" target="_blank"><img src="assets/partners/tedxkatowice.png" alt="TEDxKatowice"/></a>
+        <a href="https://www.facebook.com/SilesiaSpeechMasters/" title="Silesia Speech Masters - Toastmasters Katowice" target="_blank"><img src="assets/partners/toastmasters.png" alt="Silesia Speech Masters - Toastmasters Katowice"/></a>
+        <a href="http://www.womenintechnology.pl" title="Women In Technology" target="_blank"><img src="assets/partners/wit.png" alt="Women In Technology"/></a>
+    </div>
+
+    <a class="github-fork-ribbon" href="https://github.com/inoSilesia/inosilesia.github.io" title="Open Source">Open Sourde</a>
+    <div class="bg1"></div>
+    <div class="bg2"></div>
+    <div class="bg-credits"></div>
+    <div class="bg-shade"></div>
+
+    <script src="modules/bg-gallery/BGimageGallery.js"></script>
+    <script src="assets/gallery/app.js"></script>
+
 </body>
 </html>
