Add meet.js Katowice partner logo

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <a href="http://tedxkatowice.pl" title="TEDxKatowice" target="_blank"><img src="assets/partners/tedxkatowice.png" alt="TEDxKatowice"/></a>
         <a href="https://www.facebook.com/SilesiaSpeechMasters/" title="Silesia Speech Masters - Toastmasters Katowice" target="_blank"><img src="assets/partners/toastmasters.png" alt="Silesia Speech Masters - Toastmasters Katowice"/></a>
         <a href="http://www.womenintechnology.pl" title="Women In Technology" target="_blank"><img src="assets/partners/wit.png" alt="Women In Technology"/></a>
+        <a href="http://www.meetjs.pl" title="meet.js Katowice" target="_blank"><img src="assets/partners/meetjsktw@2x.png" alt="meet.js Katowice"/></a>
     </div>
 
     <a class="github-fork-ribbon" href="https://github.com/inoSilesia/inosilesia.github.io" title="Open Source">Open Sourde</a>
