--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <a href="https://www.facebook.com/SilesiaSpeechMasters/" title="Silesia Speech Masters - Toastmasters Katowice" target="_blank"><img src="assets/partners/toastmasters.png" alt="Silesia Speech Masters - Toastmasters Katowice"/></a>
         <a href="http://www.womenintechnology.pl" title="Women In Technology" target="_blank"><img src="assets/partners/wit.png" alt="Women In Technology"/></a>
         <a href="http://www.meetjs.pl" title="meet.js Katowice" target="_blank"><img src="assets/partners/meetjsktw@2x.png" alt="meet.js Katowice"/></a>
+        <a href="https://hs-silesia.pl/" title="Hackerspace Silesia" target="_blank"><img src="assets/partners/hackerspacesilesia.png" alt="Hackerspace Silesia"/></a>
+        <a href="http://www.clustercowork.com/" title="Cluster Cowork" target="_blank"><img src="assets/partners/clustercowork.png" alt="Cluster Cowork"/></a>
+        <a href="https://www.facebook.com/colorsofsilesia/" title="Fundacja Colors of Silesia" target="_blank"><img src="assets/partners/colorsofsilesia.png" alt="Fundacja Colors of Silesia"/></a>
+        <a href="https://inkubatory.pl/" title="Inkubatory AIP" target="_blank"><img src="assets/partners/aip-inkubatory.png" alt="Inkubatory AIP"/></a>
     </div>
 
     <a class="github-fork-ribbon" href="https://github.com/inoSilesia/inosilesia.github.io" title="Open Source">Open Sourde</a>
