Added new logotype

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <a href="https://hs-silesia.pl/" title="Hackerspace Silesia" target="_blank"><img src="assets/partners/hackerspacesilesia.png" alt="Hackerspace Silesia"/></a>
         <a href="http://www.clustercowork.com/" title="Cluster Cowork" target="_blank"><img src="assets/partners/clustercowork.png" alt="Cluster Cowork"/></a>
         <a href="https://www.facebook.com/colorsofsilesia/" title="Fundacja Colors of Silesia" target="_blank"><img src="assets/partners/colorsofsilesia.png" alt="Fundacja Colors of Silesia"/></a>
+        <a href="https://www.facebook.com/StartupsGarden/" title="Startups Garden" target="_blank"><img src="assets/partners/startupsgarden.png" alt="Startups Garden"/></a>
         <a href="https://inkubatory.pl/" title="Inkubatory AIP" target="_blank"><img src="assets/partners/aip-inkubatory.png" alt="Inkubatory AIP"/></a>
     </div>
 
